# ruiyan_rh2_hand_description

./: .gitattributes  CMakeLists.txt  README.md  package.xml
launch/: display_foxglove.launch.py  display_rviz.launch.py
meshes/ruihand6y/: fy21_Link.STL  fy31_Link.STL  fy32_Link.STL  fy41_Link.STL  fy42_Link.STL  fy43_Link.STL  fy51_Link.STL  fy52_Link.STL
meshes/ruihand6z/: base_link.STL  fz21_Link.STL  fz22_Link.STL  fz41_Link.STL  fz43_Link.STL  fz51_Link.STL  fz53_Link.STL
rviz/: rh2_hand_display.rviz
urdf/: ruihand6_left_ref.urdf  ruihand6_right_ref.urdf  ruiyan_hand_left.urdf.xacro  ruiyan_hand_left_macro.xacro  ruiyan_hand_right.urdf.xacro  ruiyan_hand_right_macro.xacro
urdf/meshes/ruihand6y/: base_link.STL  fy11_Link.STL  fy12_Link.STL  fy13_Link.STL  fy14_Link.STL  fy22_Link.STL  fy23_Link.STL  fy33_Link.STL  fy53_Link.STL
urdf/meshes/ruihand6z/: fz11_Link.STL  fz12_Link.STL  fz13_Link.STL  fz14_Link.STL  fz23_Link.STL  fz31_Link.STL  fz32_Link.STL  fz33_Link.STL  fz42_Link.STL  fz52_Link.STL
urdf/reference/: ruihand6_left_ref.urdf  ruihand6_right_ref.urdf
